tests/baselines/reference/restElementWithNullInitializer(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
restElementWithNullInitializer.ts(1,15): error TS2461: Type 'null' is not an array type.
restElementWithNullInitializer.ts(4,15): error TS2461: Type 'undefined' is not an array type.
restElementWithNullInitializer.ts(7,15): error TS2461: Type '{}' is not an array type.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== restElementWithNullInitializer.ts (3 errors) ====
    function foo1([...r] = null) {
                  ~~~~~~
!!! error TS2461: Type 'null' is not an array type.
    }
    
    function foo2([...r] = undefined) {
                  ~~~~~~
!!! error TS2461: Type 'undefined' is not an array type.
    }
    
    function foo3([...r] = {}) {
                  ~~~~~~
!!! error TS2461: Type '{}' is not an array type.
    }
    
    function foo4([...r] = []) {
    }
    